# cs178-project-one

./: .gitignore  app.py  db_test.py  db_utils.py  product_manager.py  pyproject.toml  user_manager.py
src/cs178_project_one/: app.py  db_utils.py  product_manager.py  user_manager.py
src/cs178_project_one/templates/: home.html  navbar.html  register.html
static/styles/: style.css
templates/: cart.html  head-boilerplate.html  home.html  login.html  navbar.html  register.html
