[project]
name = "cs178-project-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.29",
    "flask>=3.1.0",
    "pymysql>=1.1.1",
]

[project.scripts]
start = "cs178_project_one.app:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
